--- a/R/variants.Rmd
+++ b/R/variants.Rmd
@@ -66,12 +66,6 @@ cores <- availableCores() - 1
 source("~/bioinformatics/bioToolkit/lbFuncs.R")
 ```
 
-```{r projDir}
-## Choose either local or remote project directory
-# projDir <- here()
-projDir <- "/hpcfs/users/a1647910/211130_Q96K97del_A603fs"
-```
-
 ```{r opts}
 options(ucscChromosomeNames = FALSE)
 ```
@@ -193,7 +187,7 @@ lfc_winSize <- 21
 lfc <- lapply(topDE, function(x){
   x %>%
     dplyr::select(
-      # Don't include strand because allelic differences between groups is consistent between strands
+      # Strand not required for calculating allelic differences so don't include
       gene_id, gene_name, logFC, seqnames = chromosome, start, end, width
     ) %>%
     dplyr::filter(seqnames %in% primary_chrs) %>%
@@ -213,7 +207,7 @@ lfc <- lapply(topDE, function(x){
 })
 ```
 
-### Elastic window ranges
+### Elastic window sizes
 
 ```{r plot_lfc_winSize}
 lapply(seq_along(lfc), function(ind){
@@ -221,7 +215,7 @@ lapply(seq_along(lfc), function(ind){
     as_tibble() %>%
     dplyr::filter(!is.na(win_size)) %>%
     mutate(
-      comparison = factor(names(lfc[ind]), levels = names(lfc[1:4]))
+      comparison = factor(names(lfc[ind]), levels = names(lfc))
     )
 }) %>%
   bind_rows() %>%
@@ -244,7 +238,7 @@ lapply(seq_along(lfc), function(ind){
   )
 ```
 
-## Reference allele dissimilarity
+## Allelic diversity
 
 ```{r allele_file}
 allele_file <- file.path(here(), "files", "allele_stats.Rds")
@@ -286,242 +280,6 @@ if (!file.exists(allele_file)) {
 }
 ```
 
-```{r allele_diss}
-diss_winSize <- 21
-allele_diss <- lapply(
-  list(
-    allele_stats[c("EOfAD-like", "WT")],
-    allele_stats[c("MPS-IIIB", "WT")]
-  ),
-  function(props){
-    gr %>%
-      as_tibble() %>%
-      mutate(
-        diss = abs(props[[1]]$prop_ref - props[[2]]$prop_ref),
-        qual_ave = (props[[1]]$prop_called + props[[2]]$prop_called) / 2
-      ) %>%
-      dplyr::filter(!is.na(diss)) %>%
-      split(f = .$seqnames) %>%
-      lapply(function(chr){
-        dplyr::mutate(
-          chr,
-          diss_rollmean = rollmean(diss, k = diss_winSize, fill = NA),
-          qual_rollmean = rollmean(qual_ave, k = diss_winSize, fill = NA),
-          win_start = lag(start, n = (diss_winSize - 1) / 2),
-          win_end = lead(start, n = (diss_winSize - 1) / 2),
-          win_size = win_end - win_start
-        ) %>%
-          dplyr::select(-c(diss, qual_ave))
-      }) %>%
-      bind_rows() %>%
-      GRanges()
-  }
-) %>%
-  set_names(c("EOfADvsWT", "MPSvsWT"))
-```
-
-### Elastic window ranges
-
-```{r plot_diss_winSize}
-lapply(seq_along(allele_diss), function(ind){
-  allele_diss[[ind]] %>%
-    as_tibble() %>%
-    dplyr::filter(!is.na(win_size)) %>%
-    mutate(
-      comparison = factor(names(allele_diss[ind]), levels = names(allele_diss[1:4]))
-    )
-}) %>%
-  bind_rows() %>%
-  ggplot(aes(win_size)) +
-  geom_histogram(
-    bins = 100,
-    colour = "black",
-    fill = "grey70"
-  ) +
-  scale_x_log10() +
-  facet_wrap(~comparison, ncol = 2) +
-  labs(
-    title = paste0(
-      "Distribution of elastic window sizes generated from ",
-      diss_winSize,
-      " SNVs"
-    ),
-    x = "Window size (bp)",
-    y = "Count"
-  )
-```
-
-```{r diss_winRanges}
-diss_winRanges <- lapply(allele_diss, function(x){
-  x %>%
-    as_tibble() %>%
-    dplyr::filter(!is.na(win_size)) %>%
-    dplyr::select(
-      seqnames, start = win_start, end = win_end, width = win_size, strand,
-      diss_rollmean, qual_rollmean
-    ) %>%
-    GRanges()
-})
-```
-
-```{r save_diss_winRanges}
-diss_winRanges_path <- file.path(here(), "files", "diss_winRanges.Rds")
-if (!file.exists(diss_winRanges_path)) {
-  saveRDS(diss_winRanges, diss_winRanges_path)
-}
-```
-
-### Visualisation
-
-```{r plot_allele_diss}
-plot_allele_diss <- function(
-  chr, genes = GRanges(), mutation = GRanges(),
-  diss, diss_type = "l", diss_trans = 1, highlight_genes = TRUE,
-  lfc = NULL, lfc_type = "heatmap", lfc_trans = 1/3,
-  title
-){
-  tracks <- list()
-
-  if (length(mutation)) {
-    mutation <- mutation %>%
-      plyranges::filter(seqnames == chr) %>%
-      plyranges::mutate(symbol = gene_name)
-    mutant_track <- GeneRegionTrack(
-      range = mutation,
-      transcriptAnnotation = "symbol",
-      col = "white",
-      fill = "white",
-      showTranscriptId = TRUE,
-      fontcolor.group = "red",
-      cex.group = 0.6,
-      size = 0.3
-    )
-    tracks <- append(tracks, mutant_track)
-  }
-
-  axis_track <- GenomeAxisTrack(
-    add53 = TRUE,
-    add35 = TRUE,
-    name = paste0("Chr", chr),
-    showTitle = TRUE
-  )
-  if (length(mutation)) {
-    axis_track <- HighlightTrack(
-      trackList = list(axis_track),
-      range = mutation
-    )
-  }
-  tracks <- append(tracks, axis_track)
-
-  if (length(genes)) {
-    genes <- genes %>%
-      plyranges::filter(seqnames == chr) %>%
-      plyranges::mutate(symbol = gene_name)
-    gene_track <- GeneRegionTrack(
-      range = genes,
-      name = "DE",
-      transcriptAnnotation = "symbol",
-      showTranscriptId = TRUE,
-      fontcolor.group = 1,
-      cex.group = 0.5,
-      size = 0.3
-    )
-    tracks <- append(tracks, gene_track)
-  }
-
-  diss_track <- diss[,"diss_rollmean"] %>%
-    plyranges::filter(seqnames == chr) %>%
-    DataTrack(
-      type = diss_type,
-      name = "Between-group genetic dissimilarity",
-      window = -1,
-      windowSize = 1,
-      col = "grey30",
-      col.axis = "black",
-      yTicksAt = seq(0, 1, 0.2),
-      ylim = c(0, 1),
-      transformation = function(x){x^(diss_trans)}
-    )
-  if (highlight_genes) {
-    if (all(length(genes) & length(mutation))) {
-      ranges <- c(genes, mutation)
-    } else if (length(genes)) {
-      ranges <- genes
-    } else if (length(mutation)) {
-      ranges <- mutation
-    }
-    diss_track <- HighlightTrack(
-      trackList = list(diss_track),
-      range = c(genes, mutation),
-      col = c(rep("#ffd1d1", length(genes)), rep("red", length(mutation))),
-      fill = c(rep("#ffd1d1", length(genes)), rep("red", length(mutation)))
-    )
-  }
-  tracks <- append(tracks, diss_track)
-
-  if (length(lfc)) {
-    lfc_track <- lfc[,"lfc_rollmean"] %>%
-      plyranges::filter(seqnames == chr) %>%
-      DataTrack(
-        type = lfc_type,
-        name = paste0("abs.logFC^(1/3)"),
-        size = 1.5,
-        window = -1,
-        windowSize = 1,
-        col.axis = "black",
-        showColorBar = TRUE,
-        gradient = viridis(100, option = "D"),
-        transformation = function(x){x^(lfc_trans)}
-      )
-    tracks <- append(tracks, lfc_track)
-  }
-
-  plotTracks(
-    trackList = tracks,
-    main = title,
-    cex.main = 1,
-    col.title = "black",
-    background.title = "white"
-  )
-}
-```
-
-```{r dissPlot1}
-chr <- "17"
-ind <- 1
-plot_allele_diss(
-  chr = chr,
-  genes = genes[deGenes[[ind]]$gene_id],
-  mutation = genes[genes$gene_name == "psen1"],
-  diss = allele_diss[[ind]], diss_type = "l", diss_trans = 1,
-  lfc = lfc[[ind]], lfc_type = "heatmap", lfc_trans = 1/3,
-  title = paste0(
-    names(allele_diss[ind]),
-    " - dissimilarity win of ", diss_winSize, " SNVs",
-    " - logFC win of ", lfc_winSize, " genes"
-  )
-)
-```
-
-```{r dissPlot2}
-chr <- "24"
-ind <- 2
-plot_allele_diss(
-  chr = chr,
-  genes = genes[deGenes[[ind]]$gene_id],
-  mutation = genes[genes$gene_name == "naglu"],
-  diss = allele_diss[[ind]], diss_type = "l", diss_trans = 1,
-  lfc = lfc[[ind]], lfc_type = "heatmap", lfc_trans = 1/3,
-  title = paste0(
-    names(allele_diss[ind]),
-    " - dissimilarity win of ", diss_winSize, " SNVs",
-    " - logFC win of ", lfc_winSize, " genes"
-  )
-)
-```
-
-## Euclidean distance
-
 ```{r allele_props}
 allele_props <- lapply(allele_stats, function(stats){
   stats$allele_counts %>%
@@ -537,7 +295,7 @@ allele_props <- lapply(allele_stats, function(stats){
 ```
 
 ```{r allele_dist}
-dist_winSize <- 21
+dist_winSize <- 11
 allele_dist <- lapply(
   list(
     allele_props[c("EOfAD-like", "WT")],
@@ -557,7 +315,12 @@ allele_dist <- lapply(
       lapply(function(chr){
         dplyr::mutate(
           chr,
-          dist_rollmean = rollmean(dist, k = dist_winSize, fill = NA),
+          ## Something strange is happening with rollmean()
+          ## Consecutive 0s are being reported as having small negative rollmeans
+          ## Seems like a bug, but rollapply with the partial argument works correctly
+          # dist_rollmean = rollmean(dist, k = dist_winSize, fill = NA),
+          dist_rollmean = rollapply(dist, width = dist_winSize, mean, partial = TRUE),
+          diversity = dist_rollmean / sqrt(2),  # sqrt(2) is the maximum dist
           win_start = lag(start, n = (dist_winSize - 1) / 2),
           win_end = lead(start, n = (dist_winSize - 1) / 2),
           win_size = win_end - win_start
@@ -571,7 +334,7 @@ allele_dist <- lapply(
   set_names(c("EOfADvsWT", "MPSvsWT"))
 ```
 
-### Elastic window ranges
+### Elastic window sizes
 
 ```{r plot_dist_winSize}
 lapply(seq_along(allele_dist), function(ind){
@@ -609,8 +372,20 @@ dist_winRanges <- lapply(allele_dist, function(x){
     dplyr::filter(!is.na(win_size)) %>%
     dplyr::select(
       seqnames, start = win_start, end = win_end, width = win_size, strand,
-      dist_rollmean
+      dist_rollmean, diversity
     ) %>%
+    split(f = .$seqnames) %>%
+    ## Extend the start and ends so that the whole chromosome is covered
+    lapply(function(chr){
+      seqname <- unique(chr$seqnames)
+      chr$start[1] <- 1
+      chr$width[1] <- chr$end[1] - chr$start[1]
+      last_ind <- nrow(chr)
+      chr$end[last_ind] <- chrInfo$length[chrInfo$name == seqname]
+      chr$width[last_ind] <- chr$end[last_ind] - chr$start[last_ind]
+      chr
+    }) %>%
+    bind_rows() %>%
     GRanges()
 })
 ```
@@ -680,7 +455,7 @@ plot_allele_dist <- function(
     tracks <- append(tracks, gene_track)
   }
 
-  dist_track <- dist[,"dist_rollmean"] %>%
+  dist_track <- dist[,"diversity"] %>%
     plyranges::filter(seqnames == chr) %>%
     DataTrack(
       type = dist_type,
@@ -689,8 +464,8 @@ plot_allele_dist <- function(
       windowSize = 1,
       col = "grey30",
       col.axis = "black",
-      yTicksAt = seq(0, 1.4, 0.2),
-      ylim = c(0, 1.414214),  # 1.414214 is the maximum dist (e.g. c(1,0,0,0) vs c(0,0,1,0))
+      yTicksAt = seq(0, 1, 0.1),
+      ylim = c(0, 1),
       transformation = function(x){x^(dist_trans)}
     )
   if (highlight_genes) {
@@ -755,7 +530,7 @@ plot_allele_dist(
 ```
 
 ```{r distPlot2}
-chr <- "24"
+chr <- "25"
 ind <- 2
 plot_allele_dist(
   chr = chr,
